# hello-agent

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/chapters/: chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md
docs/modules/: agents.md  applications.md  context.md  core.md  evaluation.md  fundamentals.md  llms.md  lowcode.md  memory.md  protocols.md  tools.md  training.md
docs/zh/: README.md
docs/zh/chapters/: chapter01.md  chapter02.md  chapter05.md  chapter08.md  chapter09.md  chapter11.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md
docs/zh/modules/: context.md  (+5 more)
examples/: README.md  basic_react.py  chapter01_first_agent.py  chapter02_eliza.py  chapter03_llm_fundamentals.py  chapter04_classic_paradigms.py  chapter05_lowcode.py  chapter06_framework_practice.py  chapter07_build_framework.py  chapter08_memory_rag.py  chapter09_context_engineering.py  chapter10_protocols.py  chapter11_agentic_rl.py  chapter12_evaluation.py  chapter13_trip_planner.py  chapter14_deep_research.py  chapter15_cyber_town.py  chapter16_capstone.py
helloagents/: __init__.py  agents.py  applications.py  cli.py  context.py  evaluation.py  fundamentals.py  llms.py  lowcode.py  memory.py  protocols.py  schema.py  tools.py  training.py
tests/: test_agents.py  test_expanded_modules.py  test_fundamentals.py  test_llms.py  test_memory_context.py  test_protocols_eval_apps.py  test_tools.py
